<resources>
    <string name="app_name">GarraMain</string>
    <string name="text_welcome">Bienvenido al Zoológico</string>
    <string name="text_new">Nuevo registro de animal</string>
    <string name="text_list">Consultar animales</string>
    <string name="text_register">Registro de animal</string>
    <string name="text_name">Nombre del animal</string>
    <string name="text_specie">Especie del animal</string>
    <string name="text_ability">Habilidad del animal</string>
    <string name="text_save">Guardar</string>
    <string name="text_save_message">Animal guardado correctamente</string>
    <string name="text_empty_message">Todos los campos son obligatorios</string>
    <string name="text_name_animal">Nombre: </string>
    <string name="text_specie_animal">Especie: </string>
    <string name="text_ability_animal">Habilidad: </string>
</resources>